--- a/EnvioFormulario.html
+++ b/EnvioFormulario.html
@@ -12,7 +12,7 @@
             <h1 class="nav-titulo">Ayudemos Juntos</h1>
         </div>
         <div class="nav-derecha">
-            <a href="Principal.html">Inicio</a>
+            <a href="index.html">Inicio</a>
             <a href="ComoAyudar.html">Cómo Ayudar</a>
             <a href="Contacto.html">Contacto</a>
         </div>
