--- a/PrincipalResponsive.html
+++ b/PrincipalResponsive.html
@@ -22,7 +22,7 @@
             <a href="Principal.html">Inicio</a>
             <a href="ComoAyudar.html">Cómo Ayudar</a>
             <a href="Contacto.html">Contacto</a>
-            <a href="https://sjuan-05.github.io/sjuan05.github.io/" target="_blank">Suscribirse a RSS</a>
+            <a href="https://sjuan-05.github.io/sjuan05.github.io/rss.xml" target="_blank"><img src="Archivos/Fotos/social-1834014_1280.png" alt="RSS Photo" width="50px" height="50px"></a>
         </div>
     </nav>
 </header>
